# HelloTriangle

./: .gitignore  CMakeLists.txt  README.md
inc/: HelloTriangleApp.hpp
src/: HelloTriangleApp.cpp  main.cpp
